Fix docker image build on Github

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'main'
+      - 'tacocat'
     tags:
       - '*'
   pull_request:
@@ -28,11 +28,11 @@ jobs:
       - uses: docker/metadata-action@v4
         id: meta
         with:
-          images: tootsuite/mastodon
+          images: himynameisjonas/hometown
           flavor: |
             latest=auto
           tags: |
-            type=edge,branch=main
+            type=edge,branch=tacocat
             type=pep440,pattern={{raw}}
             type=pep440,pattern=v{{major}}.{{minor}}
             type=ref,event=pr
@@ -42,5 +42,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=registry,ref=tootsuite/mastodon:edge
+          cache-from: type=registry,ref=himynameisjonas/hometown:edge
           cache-to: type=inline
